Added colors to template

--- a/src/main/resources/templates/addBarcode.html
+++ b/src/main/resources/templates/addBarcode.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Dodaj kod kreskowy</title>
+    <style>
+        div form {
+        background-color: lightblue;
+        text-align: center;
+        color: black;
+        }
+
+
+    </style>
 </head>
 <body>
 <div style="text-align: center;">
@@ -30,7 +39,7 @@
 
     <br/>
 
-    <table align="center" border="1">
+    <table align="center" border="1" bgcolor="yellow">
         <tr>
             <td> Nazwa firmy </td>
             <td> Nazwa produktu </td>
